# Aboba_SC

./: CALC_func.cpp  CMakeLists.txt  SCPattern.cpp  TApplication.cpp  main.cpp  scheme_test_conv.py
include/: CALC_func.hpp  SCPattern.hpp  TApplication.hpp  main.hpp
test/: empty_field.txt  empty_field1.txt  empty_field2.txt  real_test.txt
